--- a/docs/docs/cmd/spo/file/file-list.mdx
+++ b/docs/docs/cmd/spo/file/file-list.mdx
@@ -19,10 +19,10 @@ m365 spo file list [options]
 : The URL of the site where the folder from which to retrieve files is located
 
 `-f, --folderUrl <folderUrl>`
-: The server- or site-relative URL of the parent folder from which to retrieve files
+: The server- or site-relative decoded URL of the parent folder from which to retrieve files
 
 `-f, --folder <folder>`
-: (deprecated. Use `folderUrl` instead) The server- or site-relative URL of the folder from which to retrieve files
+: (deprecated. Use `folderUrl` instead) The server- or site-relative decoded URL of the folder from which to retrieve files
 
 `--fields [fields]`
 : Comma-separated list of fields to retrieve. Will retrieve all fields if not specified.
