--- a/docs/docs/cmd/spo/file/file-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/file/file-retentionlabel-ensure.mdx
@@ -14,10 +14,10 @@ m365 spo file retentionlabel ensure [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the site where the retention label from a file to apply is located
+: URL of the site where the retention label from a file to apply is located.
 
 `--fileUrl [fileUrl]`
-: The site- or server-relative URL of the file that should be labelled. Specify either `fileUrl` or `fileId` but not both.
+: The site- or server-relative decoded URL of the file that should be labelled. Specify either `fileUrl` or `fileId` but not both.
 
 `i, --fileId [fileId]`
 : The UniqueId (GUID) of the file that should be labelled. Specify either `fileUrl` or `fileId` but not both.
