--- a/docs/docs/cmd/spo/file/file-retentionlabel-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-retentionlabel-remove.mdx
@@ -14,16 +14,16 @@ m365 spo file retentionlabel remove [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the site where the retention label from a file to remove is located
+: URL of the site where the retention label from a file to remove is located.
 
 `--fileUrl [fileUrl]`
-: The server- or site-relative URL of the file of which the label should be removed. Specify either `fileUrl` or `fileId` but not both.
+: The server- or site-relative decoded URL of the file of which the label should be removed. Specify either `fileUrl` or `fileId` but not both.
 
 `-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file of which the label should be removed. Specify either `fileUrl` or `fileId` but not both.
 
 `--confirm`
-: Don't prompt for confirming removing the retention label from a file
+: Don't prompt for confirming removing the retention label from a file.
 ```
 
 <Global />
