--- a/docs/docs/cmd/spo/file/file-checkout-undo.mdx
+++ b/docs/docs/cmd/spo/file/file-checkout-undo.mdx
@@ -17,7 +17,7 @@ m365 spo file checkout undo [options]
 : The URL of the site where the file is located.
 
 `-f, --fileUrl [fileUrl]`
-: The server- or site-relative URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
+: The server- or site-relative decoded URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
 
 `-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
@@ -27,14 +27,6 @@ m365 spo file checkout undo [options]
 ```
 
 <Global />
-
-## Remarks
-
-:::info
-
-When specifying option `fileUrl`, make sure that the URL is decoded. If not, you will get a `File Not Found` error.
-
-:::
 
 ## Examples
 
