--- a/docs/docs/cmd/spo/file/file-get.mdx
+++ b/docs/docs/cmd/spo/file/file-get.mdx
@@ -19,7 +19,7 @@ m365 spo file get [options]
 : The URL of the site where the file is located
 
 `-u, --url [url]`
-: The server- or site-relative URL of the file to retrieve. Specify either `url` or `id` but not both
+: The server- or site-relative decoded URL of the file to retrieve. Specify either `url` or `id` but not both
 
 `-i, --id [id]`
 : The UniqueId (GUID) of the file to retrieve. Specify either `url` or `id` but not both
