--- a/docs/docs/cmd/spo/file/file-move.mdx
+++ b/docs/docs/cmd/spo/file/file-move.mdx
@@ -17,10 +17,10 @@ m365 spo file move [options]
 : The URL of the site where the file is located
 
 `-s, --sourceUrl <sourceUrl>`
-: The server- or site-relative URL of the file to move
+: The server- or site-relative decoded URL of the file to move
 
 `-t, --targetUrl <targetUrl>`
-: Server-relative URL where to move the file
+: Server-relative decoded URL where to move the file
 
 `--deleteIfAlreadyExists`
 : If a file already exists at the targetUrl, it will be moved to the recycle bin. If omitted, the move operation will be canceled if the file already exists at the targetUrl location
