--- a/docs/docs/cmd/spo/file/file-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-remove.mdx
@@ -26,7 +26,7 @@ m365 spo page template remove
 : The ID of the file to remove. Specify either `id` or `url` but not both
 
 `-u, --url [url]`
-: The server- or site-relative URL of the file to remove. Specify either `id` or `url` but not both
+: The server- or site-relative decoded URL of the file to remove. Specify either `id` or `url` but not both
 
 `--recycle`
 : Recycle the file instead of actually deleting it
@@ -39,26 +39,26 @@ m365 spo page template remove
 
 ## Examples
 
-Remove the file with ID _0cd891ef-afce-4e55-b836-fce03286cccf_ located in site _https://contoso.sharepoint.com/sites/project-x_
+Remove file by ID
 
 ```sh
 m365 spo file remove --webUrl https://contoso.sharepoint.com/sites/project-x --id 0cd891ef-afce-4e55-b836-fce03286cccf
 ```
 
-Remove the file with site-relative URL _SharedDocuments/Test.docx_ from located in site _https://contoso.sharepoint.com/sites/project-x_
+Remove the file by site-relative URL
 
 ```sh
-m365 spo file remove --webUrl https://contoso.sharepoint.com/sites/project-x --url SharedDocuments/Test.docx
+m365 spo file remove --webUrl https://contoso.sharepoint.com/sites/project-x --url "/Shared Documents/Test.docx"
 ```
 
-Move the file with server-relative URL _/sites/project-x/SharedDocuments/Test.docx_ located in site _https://contoso.sharepoint.com/sites/project-x_ to the recycle bin
+Move the file by server-relative URL to the recycle bin
 
 ```sh
-m365 spo file remove --webUrl https://contoso.sharepoint.com/sites/project-x --url /sites/project-x/SharedDocuments/Test.docx --recycle
+m365 spo file remove --webUrl https://contoso.sharepoint.com/sites/project-x --url "/sites/project-x/SharedDocuments/Test.docx" --recycle
 ```
 
-Remove the page template with site-relative URL _SharedDocuments/Test.docx_ from located in site _https://contoso.sharepoint.com/sites/project-x_
+Remove a page template by site-relative URL
 
 ```sh
-m365 spo page template remove --webUrl https://contoso.sharepoint.com/sites/project-x --url SharedDocuments/Forms/Template.dotx
+m365 spo page template remove --webUrl https://contoso.sharepoint.com/sites/project-x --url "/Shared Documents/Forms/Template.dotx"
 ```
