--- a/docs/docs/cmd/spo/file/file-version-clear.mdx
+++ b/docs/docs/cmd/spo/file/file-version-clear.mdx
@@ -17,7 +17,7 @@ m365 spo file version clear [options]
 : The URL of the site where the file is located
 
 `-u, --fileUrl [fileUrl]`
-: The server- or site-relative URL of the file. Specify either `fileUrl` or `fileId` but not both
+: The server- or site-relative decoded URL of the file. Specify either `fileUrl` or `fileId` but not both
 
 `-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file. Specify either `fileUrl` or `fileId` but not both
