--- a/docs/docs/cmd/spo/file/file-version-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-version-remove.mdx
@@ -20,7 +20,7 @@ m365 spo file version remove [options]
 : Label of version which will be removed
 
 `-u, --fileUrl [fileUrl]`
-: The server- or site-relative URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both
+: The server- or site-relative decoded URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both
 
 `-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file to retrieve. Specify either `fileUrl` or `fileId` but not both
