Fixes use of special chars in 'spo folder' commands. Closes #5328

--- a/docs/docs/cmd/spo/folder/folder-list.mdx
+++ b/docs/docs/cmd/spo/folder/folder-list.mdx
@@ -19,7 +19,7 @@ m365 spo folder list [options]
 : The URL of the site where the folders to list are located.
 
 `-p, --parentFolderUrl <parentFolderUrl>`
-: The server- or site-relative URL of the parent folder.
+: The server- or site-relative decoded URL of the parent folder.
 
 `-f, --fields [fields]`
 : Comma-separated list of fields to retrieve. Will retrieve all fields if not specified and json output is requested.
