--- a/docs/docs/cmd/spo/folder/folder-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/folder/folder-retentionlabel-ensure.mdx
@@ -17,7 +17,7 @@ m365 spo folder retentionlabel ensure [options]
 : URL of the site where the retention label from a file to apply is located
 
 `--folderUrl [folderUrl]`
-: The server- or site-relative URL of the folder that should be labelled. Specify either `folderUrl` or `folderId` but not both.
+: The server- or site-relative decoded URL of the folder that should be labelled. Specify either `folderUrl` or `folderId` but not both.
 
 `i, --folderId [folderId]`
 : The UniqueId (GUID) of the folder that should be labelled. Specify either `folderUrl` or `folderId` but not both.
