--- a/docs/docs/cmd/spo/folder/folder-get.mdx
+++ b/docs/docs/cmd/spo/folder/folder-get.mdx
@@ -17,7 +17,7 @@ m365 spo folder get [options]
 : The URL of the site where the folder is located.
 
 `-f, --url [url]`
-: The server- or site-relative URL of the folder to retrieve. Specify either `folderUrl` or `id` but not both.
+: The server- or site-relative decoded URL of the folder to retrieve. Specify either `folderUrl` or `id` but not both.
 
 `-i, --id [id]`
 : The UniqueId (GUID) of the folder to retrieve. Specify either `url` or `id` but not both.
