--- a/docs/docs/cmd/spo/folder/folder-remove.mdx
+++ b/docs/docs/cmd/spo/folder/folder-remove.mdx
@@ -17,7 +17,7 @@ m365 spo folder remove [options]
 : The URL of the site where the folder to be deleted is located.
 
 `-f, --url <url>`
-: The server- or site-relative URL of the folder to delete.
+: The server- or site-relative decoded URL of the folder to delete.
 
 `--recycle`
 : Recycles the folder instead of actually deleting it.
