--- a/docs/docs/cmd/spo/folder/folder-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleassignment-add.mdx
@@ -17,7 +17,7 @@ m365 spo folder roleassignment add [options]
 : The URL of the site where the folder is located.
 
 `-f, --folderUrl <folderUrl>`
-: The server- or site-relative URL of the folder.
+: The server- or site-relative decoded URL of the folder.
 
 `--principalId [principalId]`
 : The SharePoint principal id. It may be either an user id or group id for which the role assignment will be addd. Specify either upn, groupName or principalId but not multiple.
@@ -32,7 +32,7 @@ m365 spo folder roleassignment add [options]
 : ID of the role definition. Specify either roleDefinitionId or roleDefinitionName but not both.
 
 `--roleDefinitionName [roleDefinitionName]`
-: The name of the role definition. E.g. 'Contribute', 'Read'. Specify either roleDefinitionId or roleDefinitionName but not both
+: The name of the role definition. E.g. 'Contribute', 'Read'. Specify either roleDefinitionId or roleDefinitionName but not both.
 ```
 
 <Global />
