--- a/docs/docs/cmd/spo/folder/folder-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleassignment-remove.mdx
@@ -17,7 +17,7 @@ m365 spo folder roleassignment remove [options]
 : The URL of the site where the folder is located.
 
 `-f, --folderUrl <folderUrl>`
-: The server- or site-relative URL of the folder.
+: The server- or site-relative decoded URL of the folder.
 
 `--principalId [principalId]`
 : The SharePoint principal id. It may be either an user id or group id for which the role assignment will be removed. Specify either upn, groupName or principalId but not multiple.
