--- a/docs/docs/cmd/spo/folder/folder-roleinheritance-break.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleinheritance-break.mdx
@@ -17,7 +17,7 @@ m365 spo folder roleinheritance break [options]
 : URL of the site where the folder is located.
 
 `-f, --folderUrl <folderUrl>`
-: The server- or site-relative URL of the folder.
+: The server- or site-relative decoded URL of the folder.
 
 `-c, --clearExistingPermissions`
 : Clear all existing permissions from the folder.
