--- a/docs/docs/cmd/spo/folder/folder-roleinheritance-reset.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleinheritance-reset.mdx
@@ -17,7 +17,7 @@ m365 spo folder roleinheritance reset [options]
 : URL of the site where the folder is located.
 
 `-f, --folderUrl <folderUrl>`
-: The server- or site-relative URL of the folder.
+: The server- or site-relative decoded URL of the folder.
 
 `--confirm`
 : Don't prompt for confirmation to reset role inheritance of the folder.
